add user service test (#328)
* add user service test

* fix sonar findings